--- a/fhtml/Cargo.toml
+++ b/fhtml/Cargo.toml
@@ -3,5 +3,9 @@ name = "fhtml"
 edition = "2021"
 version.workspace = true
 
+[features]
+const_format = ["dep:const_format"]
+
 [dependencies]
+const_format = { version = "0.2", optional = true }
 fhtml-macros.path = "../fhtml-macros"
