--- a/fhtml/Cargo.toml
+++ b/fhtml/Cargo.toml
@@ -2,10 +2,18 @@
 name = "fhtml"
 edition = "2021"
 version.workspace = true
+authors = ["Jonah Lund <jonahlund@proton.me>"]
+description = "Formatting macros tailored for HTML"
+homepage = "https://github.com/JonahLund/fhtml"
+repository = "https://github.com/JonahLund/fhtml"
+readme = "../README.md"
+keywords = ["html", "macro", "template", "formatting"]
+categories = ["template-engine", "value-formatting", "web-programming"]
+license = "MIT"
 
 [features]
 const_format = ["dep:const_format"]
 
 [dependencies]
-const_format = { version = "0.2", optional = true }
 fhtml-macros.path = "../fhtml-macros"
+const_format = { version = "0.2", optional = true }
