--- a/fhtml-macros/Cargo.toml
+++ b/fhtml-macros/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "fhtml-macros"
-edition = "2021"
+edition.workspace = true
 version.workspace = true
-authors = ["Jonah Lund <jonahlund@proton.me>"]
-description = "Formatting macros tailored for HTML"
-homepage = "https://github.com/JonahLund/fhtml"
-repository = "https://github.com/JonahLund/fhtml"
-readme = "../README.md"
-keywords = ["html", "macro", "template", "formatting"]
-categories = ["template-engine", "value-formatting", "web-programming"]
-license = "MIT"
+authors.workspace = true
+description.workspace = true
+homepage.workspace = true
+repository.workspace = true
+readme.workspace = true
+keywords.workspace = true
+categories.workspace = true
+license.workspace = true
 
 [lib]
 proc-macro = true
