--- a/fhtml/Cargo.toml
+++ b/fhtml/Cargo.toml
@@ -17,8 +17,9 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 default = []
-const-format = ["dep:const_format"]
+const = ["dep:const_format"]
 
 [dependencies]
-fhtml-macros = { version = "0.3", path = "../fhtml-macros" }
+fhtml-macros = { version = "0.4", path = "../fhtml-macros" }
 const_format = { version = "0.2", optional = true }
+lazy_format = { version = "2.0.3", optional = true }
