Add correct crate metadata for `fhtml-macros`

--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -2,6 +2,10 @@
 name = "fhtml-macros"
 version = "0.6.0"
 edition = "2021"
+authors = ["Jonah Lund <jonahlund@proton.me>"]
+repository = "https://github.com/JonahLund/fhtml"
+license = "MIT"
+rust-version = "1.71"
 
 [lib]
 proc-macro = true
