Do ast formatting on lower_ast parts, fix concat placholder bug

--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -14,4 +14,7 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1"
 quote = "1"
-syn = { version = "2" }
+syn = "2"
+
+[dev-dependencies]
+syn = { version = "2", features = ["extra-traits"] }
