--- a/fhtml-macros/Cargo.toml
+++ b/fhtml-macros/Cargo.toml
@@ -9,7 +9,12 @@ rust-version = "1.65"
 [lib]
 proc-macro = true
 
+[features]
+default = ["nightly"]
+nightly = ["proc-macro2/nightly"]
+
 [dependencies]
+fhtml-core = { version = "0.7", path = "../fhtml-core" }
 proc-macro2 = "1"
 quote = "1"
 syn = { version = "2", features = ["extra-traits", "full"] }
